--- a/TranslationReg/TranslationReg.csproj
+++ b/TranslationReg/TranslationReg.csproj
@@ -371,7 +371,11 @@
     <Content Include="Views\Analytics\Filters.cshtml" />
     <Content Include="Views\Analytics\Report.cshtml" />
     <Content Include="Views\Projects\Card.cshtml" />
-    <Content Include="Views\Languages\Tiles.cshtml" />
+    <Content Include="Views\Languages\EditCard.cshtml" />
+    <Content Include="Views\Languages\Cards.cshtml" />
+    <Content Include="Views\Languages\Card.cshtml" />
+    <Content Include="Views\LanguagePairs\Card.cshtml" />
+    <Content Include="Views\LanguagePairs\EditCard.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
