--- a/TranslationReg/TranslationReg.csproj
+++ b/TranslationReg/TranslationReg.csproj
@@ -376,6 +376,8 @@
     <Content Include="Views\Languages\Card.cshtml" />
     <Content Include="Views\LanguagePairs\Card.cshtml" />
     <Content Include="Views\LanguagePairs\EditCard.cshtml" />
+    <Content Include="Views\LanguagePairs\AddCard.cshtml" />
+    <Content Include="Views\Languages\AddCard.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
