--- a/TranslationReg/TranslationReg.csproj
+++ b/TranslationReg/TranslationReg.csproj
@@ -231,9 +231,6 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="package-lock.json" />
-    <Content Include="connectionStrings.config">
-      <SubType>Designer</SubType>
-    </Content>
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Scripts\jquery-1.12.4.intellisense.js" />
     <Content Include="Scripts\jquery-1.12.4.js" />
@@ -389,6 +386,7 @@
     <Content Include="Views\WorkTypes\Cards.cshtml" />
     <Content Include="Views\WorkTypes\AddCard.cshtml" />
     <Content Include="Views\WorkTypes\Card.cshtml" />
+    <Content Include="Views\ProjectStatuse\Card.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
